# metawrite

./: APKBUILD.postmarketos  Cargo.toml
.cargo/: config.toml
src/: args.rs  ink.rs  lib.rs  main.rs  storage.rs  ui.rs
