[package]
name = "metawrite"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-OR-LATER"

[dependencies]
bevy = {version = "0.16.1", features = ["wayland"]}


[profile.profile]
inherits = "release"
lto = "thin"
opt-level = 3
codegen-units = 1
incremental = true
debug = true

[profile.optimized]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false