[package]
name = "metawrite"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-OR-LATER"

[dependencies]
bevy = {version = "0.16.1"}
bevy_dev_tools = "0.16.1"
bevy_prototype_lyon = { git = "https://github.com/rparrett/bevy_prototype_lyon", branch = "fix-dynamic-examples" }
#bevy_prototype_lyon = "0.13.0"

[patch.crates-io]
#wgpu = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}
#wgpu-types = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}
#wgpu-core = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}
#wgpu-hal = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}
#naga = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}

[profile.profile]
inherits = "release"
lto = "thin"
opt-level = 3
codegen-units = 1
incremental = true
debug = true

[profile.optimized]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
