[package]
name = "metawrite"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"

[dependencies]
bevy = {version = "0.16.1", features = ["wayland"]}
bevy_dev_tools = "0.16.1"
bevy_prototype_lyon = { git = "https://github.com/rparrett/bevy_prototype_lyon", branch = "fix-dynamic-examples" }
bevy_render = "0.16.1"
bevy_screen_diagnostics = "0.8.1"
serde = { version = "1.0.219", features = ["derive"] }
bevy-inspector-egui = { version = "0.33", optional = true }
bevy_pkv = "0.13.0"
#bevy_prototype_lyon = "0.13.0"

[lib]
crate-type = ["cdylib","lib"]
bench = false

[features]
diagnostic = []
reflect = []
inspect = ["bevy-inspector-egui"]

[patch.crates-io]
#wgpu = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}
#wgpu-types = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}
#wgpu-core = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}
#wgpu-hal = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}
#naga = {git = "https://github.com/pomoke/wgpu.git", branch = "wgpu-24-robust"}

[profile.profile]
inherits = "release"
lto = "thin"
opt-level = 3
codegen-units = 1
incremental = true
debug = true

[profile.optimized]
inherits = "release"
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false
strip = true
